# loongson-info

./: README.md  loongson-info.spec  meson.build
data/: cn.loongson.info.conf  cn.loongson.info.xml  loongson-info-daemon.service.in  loongson-info.appdata.xml.in  loongson-info.desktop.in  meson.build
data/icons/: meson.build
debian/: changelog  control  libloongson-info-dev.install  libloongson-info.install  loongson-info.install  rules
doc/libinfo/: libinfo-docs.xml  libinfo-sections.txt  meson.build
po/: POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es_AR.po  es_CO.po  es_MX.po  et.po  eu.po  fi.po  fr.po  fur.po  fy.po  ga.po  gl.po  gu.po  ha.po  (+72 more)
src/: cn.loongson.info.service.in  cn.loongson.info.xml  dmidecode.c  dmidecode.h  hardinfo.c  hardinfo.h  loongson-infod.c  loongson-infod.h  loongson-mainboard.c  loongson-mainboard.h  loongson-perf.c  loongson-perf.h  loongson-security.c  loongson-security.h  loongson-spec.c  loongson-spec.h  loongson-state.c  loongson-state.h  loongson-utils.c  loongson-utils.h  loongson-window.c  loongson-window.h  main.c  meson.build  server.c
src/libinfo/: loongson-info.c  loongson-info.h  meson.build
